添加搜索界面，修复讲解界面一些bug